--- a/Results/report.html
+++ b/Results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22842],[],[[4,0,0,[],[1,213,7568],[]],[5,0,0,[],[1,7781,15061],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27472],[],[[4,0,0,[],[1,275,27197],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\Note\\robot\\Tests\\test.robot","*../Tests/test.robot","*User can search in google","*User can post in facebook"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\Note\\robot\\Tests\\test.robot","*../Tests/test.robot","*User can open &quot;scripting robot&quot; slide"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Test","name":"Test","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Test","name":"Test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1664201822694;
+window.output["baseMillis"] = 1664370110061;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22857;
+window.output["generated"] = 27487;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
